Make JDK 1.8 compatible.